# AI_solo_coder_task_B_115

./: README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  build2.txt  build3.txt  build4.txt  build5.txt  build6.txt  build_err.txt  build_final.txt  build_out.txt  test_err.txt  test_err2.txt  test_final.txt  test_full.txt  test_out.txt  test_out2.txt  test_output.txt  test_result.txt
backend/src/: ammo.rs  ammo_comparator.rs  api.rs  ballistic_simulator.rs  ballistics.rs  battles.rs  config.rs  coordinator.rs  fea.rs  genetic.rs  main.rs  metrics.rs  salvo_optimizer.rs  siege.rs  siege_evaluator.rs  storage.rs  udp_receiver.rs  udp_server.rs  wall_weakness_finder.rs
clickhouse/: init.sql
clickhouse/config.d/: merge_tree_settings.xml
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: style.css
frontend/js/: ammo_comparator.js  ballistic_panel.js  battle_simulator.js  main.js  particles.js  trebuchet.js  trebuchet_3d.js
simulator/: Dockerfile  trebuchet_simulator.py
